[Fix] Member pv transfer bug

--- a/www/public/index.html
+++ b/www/public/index.html
@@ -1,6 +1,6 @@
 <SCRIPT LANGUAGE="JavaScript">
-			<!--
-				// window.location = "./member" ;
-            window.location = "http://cms.cciofficial.com"
-			//-->
-			</SCRIPT>
+    <!--
+    window.location = "./member";
+    // window.location = "http://cms.cciofficial.com"
+    //-->
+</SCRIPT>
